# aoc

./: .gitignore  12.hs  15  16.hs  17  17.hs  18  18.hs  19  19.hs  20  21.hs  22  22.hs  23  23.hs  24.hs  4.hs  6.hs  8.hs  template.hs
2020/: 01.hs  02.hs  03.hs  05.hs  07.hs  09.hs  10.hs  11.hs  13.hs  14.hs  15.hs  20.hs  25.hs  Graph.hs
2021/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  Day24.hs  Graph.hs  Utils.hs
2022/: 1.hs  10.hs  11.hs  12.hs  15.hs  16.hs  2.hs  3.hs  4.hs  5.hs  6.hs  7.hs  8.hs  9.hs  Graph.hs  Utils.hs
2022/13/: CHANGELOG.md
2022/13/app/: Main.hs
2022/14/: template.cabal
2022/14/app/: Main.hs
2022/25/: template.cabal
2022/25/app/: Main.hs  Utils.hs
2022/template/: template.cabal
2023/1/app/: Main.hs
2023/template/app/: Main.hs
2024/: aoc2024.cabal
2024/app/: Main.hs
2024/app/Aoc/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Utils.hs
2025/: aoc2025.cabal
2025/app/: Main.hs
2025/app/Aoc/: Day1.hs  Day2.hs  DayTemplate.hs
