cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Eskil Q
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day
    import:           warnings
    main-is:          Main.hs
    ghc-options: -threaded
    other-modules:    Aoc.Utils
                    , Aoc.Day1
    -- other-extensions:
    build-depends:    base >=4.16 && <5
                    , containers >= 0.6 && < 0.7
                    , optparse-applicative ^>= 0.18
                    , regex-tdfa >= 1.3 && < 2
                    , array ^>= 0.5
                    , linear >= 1 && < 2
                    , search-algorithms ^>= 0.3.3
                    , transformers ^>= 0.6.1.2
                    , parallel ^>= 3.2
    hs-source-dirs:   app
    default-language: Haskell2010
