cabal-version:      3.0
name:               template
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Eskil Q
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable 13
    import:           warnings
    main-is:          Main.hs
    other-modules:    Utils
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , mtl ^>=2.3.1
    hs-source-dirs:   app
    default-language: Haskell2010
